<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_gravity="center"
    tools:context="com.slipstreamcommunications.seedsthatfeed.FruitActivity">

    <!-- Headers for the fruit info -->
    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/pic"
        android:layout_row="0"
        android:layout_column="0"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/fruit_type"
        android:layout_row="0"
        android:layout_column="1"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/fruit_hue"
        android:layout_row="0"
        android:layout_column="2"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/fruit_count"
        android:layout_row="0"
        android:layout_column="3"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true" />


<!-- Fruit info displays here -->
    <ImageView
        android:id="@+id/photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="left"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/fruit_color"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/fruit_quantity"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_gravity="left" />

    <!-- Total of all fruit (label and final fruit count -->
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/total_count"
        android:layout_gravity="left"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/total_fruit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_marginTop="50dp"/>


</GridLayout>

